--- a/.github/workflows/build-boot-image.yml
+++ b/.github/workflows/build-boot-image.yml
@@ -186,7 +186,7 @@ jobs:
   # ======================================================
   release:
     runs-on: ubuntu-latest
-    needs: create-boot-image
+    needs: [build-boot-files, create-boot-image]
     permissions:
       contents: write
     steps:
